--- a/chetan/third.ipynb
+++ b/chetan/third.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "54953637",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "7fa5c878",
    "metadata": {},
    "outputs": [
@@ -41,90 +41,362 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>SepalLengthCm</th>\n",
-       "      <th>SepalWidthCm</th>\n",
-       "      <th>PetalLengthCm</th>\n",
-       "      <th>PetalWidthCm</th>\n",
-       "      <th>Species</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Id  SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm      Species\n",
-       "0   1            5.1           3.5            1.4           0.2  Iris-setosa\n",
-       "1   2            4.9           3.0            1.4           0.2  Iris-setosa\n",
-       "2   3            4.7           3.2            1.3           0.2  Iris-setosa\n",
-       "3   4            4.6           3.1            1.5           0.2  Iris-setosa\n",
-       "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
+       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
+       "1  female        group C                some college      standard   \n",
+       "2  female        group B             master's degree      standard   \n",
+       "3    male        group A          associate's degree  free/reduced   \n",
+       "4    male        group C                some college      standard   \n",
+       "\n",
+       "  test preparation course  math score  reading score  writing score  \n",
+       "0                    none          72             72             74  \n",
+       "1               completed          69             90             88  \n",
+       "2                    none          90             95             93  \n",
+       "3                    none          47             57             44  \n",
+       "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = pd.read_csv('Iris.csv')\n",
+    "dataset = pd.read_csv('StudentsPerformance.csv')\n",
     "dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eb52b921",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                         object\n",
+       "race/ethnicity                 object\n",
+       "parental level of education    object\n",
+       "lunch                          object\n",
+       "test preparation course        object\n",
+       "math score                      int64\n",
+       "reading score                   int64\n",
+       "writing score                   int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "12724a0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                         0\n",
+       "race/ethnicity                 0\n",
+       "parental level of education    0\n",
+       "lunch                          0\n",
+       "test preparation course        0\n",
+       "math score                     0\n",
+       "reading score                  0\n",
+       "writing score                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6745aef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>88</td>\n",
+       "      <td>99</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>62</td>\n",
+       "      <td>55</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>59</td>\n",
+       "      <td>71</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>68</td>\n",
+       "      <td>78</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>77</td>\n",
+       "      <td>86</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     gender race/ethnicity parental level of education         lunch  \\\n",
+       "0    female        group B           bachelor's degree      standard   \n",
+       "1    female        group C                some college      standard   \n",
+       "2    female        group B             master's degree      standard   \n",
+       "3      male        group A          associate's degree  free/reduced   \n",
+       "4      male        group C                some college      standard   \n",
+       "..      ...            ...                         ...           ...   \n",
+       "995  female        group E             master's degree      standard   \n",
+       "996    male        group C                 high school  free/reduced   \n",
+       "997  female        group C                 high school  free/reduced   \n",
+       "998  female        group D                some college      standard   \n",
+       "999  female        group D                some college  free/reduced   \n",
+       "\n",
+       "    test preparation course  math score  reading score  writing score  \n",
+       "0                      none          72             72             74  \n",
+       "1                 completed          69             90             88  \n",
+       "2                      none          90             95             93  \n",
+       "3                      none          47             57             44  \n",
+       "4                      none          76             78             75  \n",
+       "..                      ...         ...            ...            ...  \n",
+       "995               completed          88             99             95  \n",
+       "996                    none          62             55             55  \n",
+       "997               completed          59             71             65  \n",
+       "998               completed          68             78             77  \n",
+       "999                    none          77             86             86  \n",
+       "\n",
+       "[1000 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.dropna()"
+   ]
   }
  ],
  "metadata": {
@@ -143,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
